# SQLMind-Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  package-lock.json  pyproject.toml  streamlit_app.py
.github/workflows/: tests.yml
docs/: README.md  architecture.md  development.md  operations.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ChartPanel.tsx  DataTable.tsx  Exports.tsx  ui.tsx
frontend/src/lib/: api.ts  chart.ts  export.ts
scripts/: init_demo_db.py
sqlmind_agent/: __init__.py  analysis_plan.py  api.py  config.py  dashboard_agent.py  database.py  dependency_check.py  mcp_client.py  nim_client.py  planner.py  safety.py  schemas.py
tests/: test_analysis_plan.py  test_api.py  test_dashboard_agent.py  test_mcp_client.py  test_mysql_dependency.py  test_nim_client.py  test_safety.py  test_visual_analytics.py
